Fix bullet point alignment on Firefox

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,8 +25,9 @@ body {
 }
 
 ul, li {
-    list-style-position: inside;
+    list-style-position: outside;
     text-align: left;
+    margin-left: 0.5em;
     padding: 0; 
     color: #525050;
 }
@@ -63,7 +64,9 @@ header ul li {
   display: inline-block;
   font-family: 'Baskerville', Serif;
   padding: 0 10px;
-  margin-right: 1em; 
+  margin-right: 1em;
+  margin-left: 0;
+  list-style-position: outside; 
 }
 
 header ul li:last-child {
